lab1/Test/L1-A-11-7.cmm
int ;
struct h0oPy {
}tBucbfWIT ( int Ze5Y , int aSz76JUHpKSw ) {
  int y8 ;
  struct BproBR4 vfvdaG8MU ;
  struct viYtp uQiMoPlade ;
  int fIvX ;
  int ykuf3ZY , A5SEH_5M2j2zXRLp ;
}
int ;
struct {
}H ( ) {
  struct EMb4XMyB _X8DpjpPh = B561tnG ;
  if ( dC5HlZ8Fd918Dvql )   while ( GDvPrp1msXcklnhEApC 
    )   while ( TID1hc0vj )   er ;


else {
    return aflPnkR ;
    if ( SQeFkB2PyiHLlm )     KkUJ9JLXd5Ft = T6SB3kkmqWwmcUqxL 
      || ef7KWFWQw6NuXPNPsU >= m8nddtZRHfOsehuAKDU + - ! 
      eqMnIIl4afQA ( wvdcIst && HS6sjeN != F9x6c_7 / OaRJu3L0kNGnY2G63q 
      [ Q32x == EpUS9HZLUxU4Bfh - ( dF + K5RQ4G [ X5vwqFHe 
      < X7iNzmf + Rugb94uBY ( _IDYE5IoPVuC , GrP , IZhH3pvhr8 
      = ;hTnHb1S3kYGKx <= QjtHaJIhzTtrI / _u5D_xQ3 ( AS72gCic1xI 
      , noEQoxG319P7kOjVjuD , AFx2NYfbEg > KWmn1sEpsM5bxultHTP 
      + L1aGBtd4dJHl ( UpAQwZG , qkp1YWD_yw <= w431komT 
      ( RcCAcd9W7752KpW - ! txaL_N5lutMJumNE8 ) * ! - - 
      1131206890 ) ) ) ] / 327286181.1162941138 ) . x7rixWKvA 
      * kfYahbBcA ( ) ] ) ;

  }
}
float Osaecyhya0jxHN_pNJ7N [ 900969608 ] 
;
int ;
int ;
int != ;
int ;
;
int  ;
int IBflrPADHQQx2m ( ) {
  urKOav4MWGc2mHzKw7K ;
  if ( IYcJU6XXrpZt )   b1fyH ;
else   if ( CCkqy6QHyB9BuT7b8kN )   u8W3b4CYT ;


  while ( ID1oy )   if ( s_JHA ) {
    edU0ECkpaFW ;
    LuPsUJMLp0UnBy91kZcr ;
  }else   if ( Vk_fHRXhxgDt4 )   azJxI ;
else   R8S6nmQkd ;



}
int yDTSHozarKIM float , FoDHHEKHRwsPK 

;
int ;
